ws: Apply hit test insets to touch edit handle client roots.

Touch selection editing handles use window targeting insets.
(to let users more easily tap text above the visible handle)

Adjust targeting of the handle's client root window in Mus.
(otherwise events target the server's invisible root window)

Bug: 872891
Test: KSV (Ctrl-Alt-/) touch edit handles don't block tapping text.
Change-Id: I6d8614257dc4927a1562bc02c2eefef1f8ff2faa
Reviewed-on: https://chromium-review.googlesource.com/1226877
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591478}
Former-commit-id: d216c7a15eb1035e6e67af21fd92543d0aed4bf0